--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "vredeburg",
+	"name": "vredeburg-next",
 	"version": "1.0.0",
 	"description": "",
 	"scripts": {
@@ -21,13 +21,13 @@
 	},
 	"homepage": "https://github.com/uiuxarghya/vredeburg-next#readme",
 	"devDependencies": {
-		"@11ty/eleventy": "^0.11.1",
-		"@11ty/eleventy-plugin-syntaxhighlight": "^3.1.2",
-		"@tailwindcss/typography": "^0.3.1",
+		"@11ty/eleventy": "^0.12.1",
+		"@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
+		"@tailwindcss/typography": "^0.4.1",
 		"cross-env": "^7.0.3",
 		"eleventy-plugin-tailwindcss": "^0.3.0",
 		"html-minifier": "^4.0.0",
-		"luxon": "^1.24.1",
+		"luxon": "^2.1.1",
 		"rimraf": "^3.0.2",
 		"terser": "^4.8.0"
 	}
